--- a/DevDetective/Dev.html
+++ b/DevDetective/Dev.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="Dev.css">
 </head>
 
 <body>
@@ -96,7 +96,7 @@
 
     </div>
 
-    <script src="./script.js"></script>
+    <script src="Dev.js"></script>
 </body>
 
 </html>
