--- a/Basic counter app/counter.html
+++ b/Basic counter app/counter.html
@@ -34,6 +34,6 @@
     </div>
 
     <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="counter.js"></script>
 </body>
 </html>
